clusters/eks-usw2/apps/ai/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: ai
  annotations:
    item.homer.rajsingh.info/name: "Open WebUI"
    item.homer.rajsingh.info/subtitle: "AI Chat"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/openai.png"
    item.homer.rajsingh.info/tag: "ai"
    item.homer.rajsingh.info/keywords: "ai, chat, openai"

    service.homer.rajsingh.info/name: "AI"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "chat.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: open-webui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
